# Transazione_Bancarie_1

./: .gitignore  CMakeLists.txt  Client.cpp  Client.h  Operazioni_Finanziarie.cpp  Operazioni_Finanziarie.h  main.cpp
test/: CMakeLists.txt  ClientTest.cpp  Client_Fixture.cpp  Operazioni_Test.cpp
